# az-sociofiscal-sim

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/api/: __init__.py  main.py
backend/api/routes/: __init__.py  simplified_tax.py
backend/api/schemas/: __init__.py  requests.py  responses.py
backend/api/services/: __init__.py  evaluation.py  interview.py
backend/az_sim/: __init__.py  engine.py  entities.py
backend/az_sim/parameters/: __init__.py  licensed_activities.py  rates.py
backend/az_sim/variables/: __init__.py  thresholds.py  turnover.py
backend/tests/: __init__.py  test_api.py  test_calculations.py  test_eligibility.py  test_property_exemptions.py
docs/: DATA_DICTIONARY.md  DECISION_TREE.md  LEGAL_SOURCES.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/calculator/: page.tsx
frontend/components/analytics/: TaxChart.tsx
frontend/components/questionnaire/: QuestionCard.tsx  ResultCard.tsx  Stepper.tsx  index.ts
frontend/components/ui/: Button.tsx  Checkbox.tsx  FeatureGrid.tsx  Hero.tsx  Input.tsx  Select.tsx  Tooltip.tsx  index.ts
frontend/lib/: api.ts  dictionary.ts  types.ts  utils.ts
frontend/tests/: smoke.test.ts
